// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TaskBar /> > Snapshots > <Clock /> > should match snapshot 1`] = `
<div>
  <div
    class="sprinkles_paddingLeft__1txm3g837 sprinkles_paddingRight__1txm3g839 sprinkles_paddingTop__1txm3g83b sprinkles_paddingBottom__1txm3g82z sprinkles_boxShadow__1txm3g85z sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_alignItems__1txm3g81n"
    style="--paddingLeft__1txm3g836: var(--r95-space-6); --paddingRight__1txm3g838: var(--r95-space-6); --paddingTop__1txm3g83a: var(--r95-space-2); --paddingBottom__1txm3g82y: var(--r95-space-2); --boxShadow__1txm3g85y: var(--r95-shadow-in); --display__1txm3g80: flex; --justifyContent__1txm3g81e: center; --alignItems__1txm3g81m: center;"
  >
    <div
      class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
    >
      10:00
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_false__1ct83mo4"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with active prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_true__1ct83mo5 TaskBar_windowsButton_small_true__1ct83mo3 TaskBar_windowsButton_compound_0__1ct83mo7"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with icon prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_false__1ct83mo4"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    >
      <svg test-file-stub />
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with small prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot 1`] = `
<div>
  <div
    class="sprinkles_height__1txm3g81z sprinkles_width__1txm3g81t sprinkles_position__1txm3g83d sprinkles_bottom__1txm3g83j sprinkles_left__1txm3g83l sprinkles_right__1txm3g83h sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_padding__1txm3g82r sprinkles_zIndex__1txm3g87d sprinkles_backgroundColor__1txm3g83p sprinkles_boxShadow__1txm3g85z"
    style="--height__1txm3g81y: 28px; --width__1txm3g81s: 100%; --position__1txm3g83c: fixed; --bottom__1txm3g83i: 0px; --left__1txm3g83k: 0px; --right__1txm3g83g: 0px; --display__1txm3g80: flex; --justifyContent__1txm3g81e: space-between; --padding__1txm3g82q: var(--r95-space-2); --zIndex__1txm3g87c: var(--r95-zIndex-taskbar); --backgroundColor__1txm3g83o: var(--r95-color-material); --boxShadow__1txm3g85y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="sprinkles_width__1txm3g81t sprinkles_marginLeft__1txm3g82l sprinkles_paddingLeft__1txm3g837 sprinkles_display__1txm3g81"
      style="--width__1txm3g81s: 100%; --marginLeft__1txm3g82k: var(--r95-space-2); --paddingLeft__1txm3g836: var(--r95-space-0); --display__1txm3g80: flex;"
    />
    <div
      class="sprinkles_paddingLeft__1txm3g837 sprinkles_paddingRight__1txm3g839 sprinkles_paddingTop__1txm3g83b sprinkles_paddingBottom__1txm3g82z sprinkles_boxShadow__1txm3g85z sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_alignItems__1txm3g81n"
      style="--paddingLeft__1txm3g836: var(--r95-space-6); --paddingRight__1txm3g838: var(--r95-space-6); --paddingTop__1txm3g83a: var(--r95-space-2); --paddingBottom__1txm3g82y: var(--r95-space-2); --boxShadow__1txm3g85y: var(--r95-shadow-in); --display__1txm3g80: flex; --justifyContent__1txm3g81e: center; --alignItems__1txm3g81m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 1`] = `
<div>
  <div
    class="sprinkles_height__1txm3g81z sprinkles_width__1txm3g81t sprinkles_position__1txm3g83d sprinkles_bottom__1txm3g83j sprinkles_left__1txm3g83l sprinkles_right__1txm3g83h sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_padding__1txm3g82r sprinkles_zIndex__1txm3g87d sprinkles_backgroundColor__1txm3g83p sprinkles_boxShadow__1txm3g85z"
    style="--height__1txm3g81y: 28px; --width__1txm3g81s: 100%; --position__1txm3g83c: fixed; --bottom__1txm3g83i: 0px; --left__1txm3g83k: 0px; --right__1txm3g83g: 0px; --display__1txm3g80: flex; --justifyContent__1txm3g81e: space-between; --padding__1txm3g82q: var(--r95-space-2); --zIndex__1txm3g87c: var(--r95-zIndex-taskbar); --backgroundColor__1txm3g83o: var(--r95-color-material); --boxShadow__1txm3g85y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="sprinkles_width__1txm3g81t sprinkles_marginLeft__1txm3g82l sprinkles_paddingLeft__1txm3g837 sprinkles_display__1txm3g81"
      style="--width__1txm3g81s: 100%; --marginLeft__1txm3g82k: var(--r95-space-2); --paddingLeft__1txm3g836: var(--r95-space-0); --display__1txm3g80: flex;"
    />
    <div
      class="sprinkles_paddingLeft__1txm3g837 sprinkles_paddingRight__1txm3g839 sprinkles_paddingTop__1txm3g83b sprinkles_paddingBottom__1txm3g82z sprinkles_boxShadow__1txm3g85z sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_alignItems__1txm3g81n"
      style="--paddingLeft__1txm3g836: var(--r95-space-6); --paddingRight__1txm3g838: var(--r95-space-6); --paddingTop__1txm3g83a: var(--r95-space-2); --paddingBottom__1txm3g82y: var(--r95-space-2); --boxShadow__1txm3g85y: var(--r95-shadow-in); --display__1txm3g80: flex; --justifyContent__1txm3g81e: center; --alignItems__1txm3g81m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 2`] = `
<div>
  <div
    class="sprinkles_height__1txm3g81z sprinkles_width__1txm3g81t sprinkles_position__1txm3g83d sprinkles_bottom__1txm3g83j sprinkles_left__1txm3g83l sprinkles_right__1txm3g83h sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_padding__1txm3g82r sprinkles_zIndex__1txm3g87d sprinkles_backgroundColor__1txm3g83p sprinkles_boxShadow__1txm3g85z"
    style="--height__1txm3g81y: 28px; --width__1txm3g81s: 100%; --position__1txm3g83c: fixed; --bottom__1txm3g83i: 0px; --left__1txm3g83k: 0px; --right__1txm3g83g: 0px; --display__1txm3g80: flex; --justifyContent__1txm3g81e: space-between; --padding__1txm3g82q: var(--r95-space-2); --zIndex__1txm3g87c: var(--r95-zIndex-taskbar); --backgroundColor__1txm3g83o: var(--r95-color-material); --boxShadow__1txm3g85y: var(--r95-shadow-out);"
  >
    <div
      class="sprinkles_position__1txm3g83d sprinkles_bottom__1txm3g83j"
      style="--position__1txm3g83c: absolute; --bottom__1txm3g83i: 28px;"
    >
      <ul
        class="List_list__1lxkvz42"
      >
        <li
          class="List_listItem__1lxkvz40"
        >
          <svg test-file-stub />
          Local Disk (C:)
        </li>
        <li
          class="List_listItem__1lxkvz40"
        >
          <svg test-file-stub />
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_true__1ct83mo5 TaskBar_windowsButton_small_true__1ct83mo3 TaskBar_windowsButton_compound_0__1ct83mo7"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="sprinkles_width__1txm3g81t sprinkles_marginLeft__1txm3g82l sprinkles_paddingLeft__1txm3g837 sprinkles_display__1txm3g81"
      style="--width__1txm3g81s: 100%; --marginLeft__1txm3g82k: var(--r95-space-2); --paddingLeft__1txm3g836: var(--r95-space-0); --display__1txm3g80: flex;"
    />
    <div
      class="sprinkles_paddingLeft__1txm3g837 sprinkles_paddingRight__1txm3g839 sprinkles_paddingTop__1txm3g83b sprinkles_paddingBottom__1txm3g82z sprinkles_boxShadow__1txm3g85z sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_alignItems__1txm3g81n"
      style="--paddingLeft__1txm3g836: var(--r95-space-6); --paddingRight__1txm3g838: var(--r95-space-6); --paddingTop__1txm3g83a: var(--r95-space-2); --paddingBottom__1txm3g82y: var(--r95-space-2); --boxShadow__1txm3g85y: var(--r95-shadow-in); --display__1txm3g80: flex; --justifyContent__1txm3g81e: center; --alignItems__1txm3g81m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with one Modal 1`] = `
<div>
  <div
    class="Modal_modalWrapper__1txblt60 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    />
  </div>
  <div
    class="sprinkles_height__1txm3g81z sprinkles_width__1txm3g81t sprinkles_position__1txm3g83d sprinkles_bottom__1txm3g83j sprinkles_left__1txm3g83l sprinkles_right__1txm3g83h sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_padding__1txm3g82r sprinkles_zIndex__1txm3g87d sprinkles_backgroundColor__1txm3g83p sprinkles_boxShadow__1txm3g85z"
    style="--height__1txm3g81y: 28px; --width__1txm3g81s: 100%; --position__1txm3g83c: fixed; --bottom__1txm3g83i: 0px; --left__1txm3g83k: 0px; --right__1txm3g83g: 0px; --display__1txm3g80: flex; --justifyContent__1txm3g81e: space-between; --padding__1txm3g82q: var(--r95-space-2); --zIndex__1txm3g87c: var(--r95-zIndex-taskbar); --backgroundColor__1txm3g83o: var(--r95-color-material); --boxShadow__1txm3g85y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="sprinkles_width__1txm3g81t sprinkles_marginLeft__1txm3g82l sprinkles_paddingLeft__1txm3g837 sprinkles_display__1txm3g81"
      style="--width__1txm3g81s: 100%; --marginLeft__1txm3g82k: var(--r95-space-2); --paddingLeft__1txm3g836: var(--r95-space-0); --display__1txm3g80: flex;"
    />
    <div
      class="sprinkles_paddingLeft__1txm3g837 sprinkles_paddingRight__1txm3g839 sprinkles_paddingTop__1txm3g83b sprinkles_paddingBottom__1txm3g82z sprinkles_boxShadow__1txm3g85z sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_alignItems__1txm3g81n"
      style="--paddingLeft__1txm3g836: var(--r95-space-6); --paddingRight__1txm3g838: var(--r95-space-6); --paddingTop__1txm3g83a: var(--r95-space-2); --paddingBottom__1txm3g82y: var(--r95-space-2); --boxShadow__1txm3g85y: var(--r95-shadow-in); --display__1txm3g80: flex; --justifyContent__1txm3g81e: center; --alignItems__1txm3g81m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with two Modals 1`] = `
<div>
  <div
    class="Modal_modalWrapper__1txblt60 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        Windows Explorer
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    />
  </div>
  <div
    class="Modal_modalWrapper__1txblt60 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    />
  </div>
  <div
    class="sprinkles_height__1txm3g81z sprinkles_width__1txm3g81t sprinkles_position__1txm3g83d sprinkles_bottom__1txm3g83j sprinkles_left__1txm3g83l sprinkles_right__1txm3g83h sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_padding__1txm3g82r sprinkles_zIndex__1txm3g87d sprinkles_backgroundColor__1txm3g83p sprinkles_boxShadow__1txm3g85z"
    style="--height__1txm3g81y: 28px; --width__1txm3g81s: 100%; --position__1txm3g83c: fixed; --bottom__1txm3g83i: 0px; --left__1txm3g83k: 0px; --right__1txm3g83g: 0px; --display__1txm3g80: flex; --justifyContent__1txm3g81e: space-between; --padding__1txm3g82q: var(--r95-space-2); --zIndex__1txm3g87c: var(--r95-zIndex-taskbar); --backgroundColor__1txm3g83o: var(--r95-color-material); --boxShadow__1txm3g85y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="sprinkles_width__1txm3g81t sprinkles_marginLeft__1txm3g82l sprinkles_paddingLeft__1txm3g837 sprinkles_display__1txm3g81"
      style="--width__1txm3g81s: 100%; --marginLeft__1txm3g82k: var(--r95-space-2); --paddingLeft__1txm3g836: var(--r95-space-0); --display__1txm3g80: flex;"
    />
    <div
      class="sprinkles_paddingLeft__1txm3g837 sprinkles_paddingRight__1txm3g839 sprinkles_paddingTop__1txm3g83b sprinkles_paddingBottom__1txm3g82z sprinkles_boxShadow__1txm3g85z sprinkles_display__1txm3g81 sprinkles_justifyContent__1txm3g81f sprinkles_alignItems__1txm3g81n"
      style="--paddingLeft__1txm3g836: var(--r95-space-6); --paddingRight__1txm3g838: var(--r95-space-6); --paddingTop__1txm3g83a: var(--r95-space-2); --paddingBottom__1txm3g82y: var(--r95-space-2); --boxShadow__1txm3g85y: var(--r95-shadow-in); --display__1txm3g80: flex; --justifyContent__1txm3g81e: center; --alignItems__1txm3g81m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;
